--- a/facilities.html
+++ b/facilities.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Stitch by Stitch - CMT Garment Manufacturing">
   <meta property="og:description" content="Expert garment manufacturing with CMT services. Quality production from Pakistan.">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="facilities.css">
+  <link rel="stylesheet" href="Facilities.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>Facilities - Stitch by Stitch - CMT Garment Manufacturing Pakistan</title>
 </head>
@@ -314,3 +314,4 @@
 
 </body>
 </html>
+
