--- a/gallery.html
+++ b/gallery.html
@@ -54,15 +54,15 @@
     </div>
     <div class="gallery-grid">
       <figure>
-        <img src="./assets/gallery-1.jpg" alt="Sample women's blouse — Stitch by Stitch">
+        <img src="./assets/women-wear.jpeg" alt="Sample women's blouse — Stitch by Stitch"  width="250px" height="200px">
         <figcaption>Women's blouse sample</figcaption>
       </figure>
       <figure>
-        <img src="./assets/gallery-2.jpg" alt="Bulk production line — Stitch by Stitch">
+        <img src="./assets/workforce.jpeg" alt="Bulk production line — Stitch by Stitch">
         <figcaption>Production line</figcaption>
       </figure>
       <figure>
-        <img src="./assets/gallery-3.jpg" alt="Export-ready packed cartons">
+        <img src="./assets/sampling.jpeg" alt="Export-ready packed cartons">
         <figcaption>Export packing</figcaption>
       </figure>
     </section>
